--- a/css/style.css
+++ b/css/style.css
@@ -112,4 +112,27 @@ img {
   max-width: 960px;
   margin: 0 auto;
   padding: 60px 0;
+  display: flex;
+}
+
+.sobre-info {
+  flex: 2;
+  margin: 0 10px;
+}
+
+.sobre-info h1 {
+  font-size: 3em;
+  margin-bottom: .5em;
+}
+
+.sobre-info p {
+  font-size: 1.25em;
+  line-height: 1.4;
+  margin-bottom: 1em;
+  color: #585858;
+}
+
+.sobre-img {
+  flex: 1;
+  margin: 0 10px;
 }
