--- a/css/style.css
+++ b/css/style.css
@@ -138,3 +138,22 @@ img {
   margin: 0 10px;
 }
 
+/*Produtos*/
+
+.produtos {
+  max-width: 960px;
+  margin: 60px auto;
+}
+
+.produtos h1 {
+  font-size: 3em;
+  margin: 0 10px 60px 10px;
+}
+
+.produtos-container {
+  display: flex;
+}
+
+.produtos-item {
+
+}
